--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,20 @@
 {
+    "name": "oscar/composer-hello-world",
+    "description": "Bla bla Bla si bla més bla si guay",
+    "type": "project",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Oscar Duran",
+            "email": "xoscarduranx@gmail.com"
+        }
+    ],
     "require": {
         "mfacenet/hello-world": "^1.0"
+    },
+    "autoload" :{
+        "psr-4" : {
+            "Oscar\\Hello\\" : "src/"
+        }
     }
 }
